--- a/colorsExercise.css
+++ b/colorsExercise.css
@@ -1,30 +1,30 @@
 
 h1 {
-    color: rgb(72, 32, 83);
+    color: darkmagenta;
     background-color: red;
 }
 h2 {
-    color: rgb(58, 28, 102);
+    color: #101055;
     background-color: #FF8800;
 }
 h3 {
-    color: rgb(43, 43, 121);
+    color: #034;
     background-color: #ff0;
 }
 h4 {
-    color: rgb(40, 94, 40);
+    color: #208031ff;
     background-color: #00FF00FF;
 }
 h5 {
-    color: rgb(255, 255, 0);
+    color: #ff0f;
     background-color: #00ff;
 }
 h6 {
-    color: #ff8800;
+    color: rgb(200, 100, 00);
     background-color: rgb(100, 0, 255);
 }
 p {
-    color: rgb(90, 14, 14);
+    color: rgb(90, 14, 14, 1);
     background-color: rgb(200, 0, 255, 1);
 }
 #hotpink {
